--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -2,6 +2,7 @@
 	* configure.ac: Release 0.12.3.1
 	* common/gtk/gtkbugs.c, common/gtk/guimap.c, client/gtk/histogram.c:
 	Build with Gtk+-2.20
+	* client/gtk/monopoly.c, client/common/player.c: Use en_US
 	* Released 0.12.3.1 (Translation update)
 
 2009-11-04  Roland Clobus <rclobus@bigfoot.com>
