--- a/pioneers/po/es.po
+++ b/pioneers/po/es.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pioneers 0.12.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-09-26 10:18+0200\n"
+"POT-Creation-Date: 2010-09-27 08:02+0200\n"
 "PO-Revision-Date: 2009-11-23 22:19+0000\n"
 "Last-Translator: DiegoJ <diegojromerolopez@gmail.com>\n"
 "Language-Team: Spanish <debian-l10n-spanish@lists.debian.org>\n"
@@ -726,7 +726,7 @@ msgstr "%s quita un puente.\n"
 
 #: ../client/common/player.c:673
 #, c-format
-msgid "%s has cancelled a ship's movement.\n"
+msgid "%s has canceled a ship's movement.\n"
 msgstr "%s cancela un movimiento de barco.\n"
 
 #: ../client/common/player.c:676
@@ -1693,7 +1693,7 @@ msgid "Development Card"
 msgstr "Carta de desarrollo"
 
 #: ../client/gtk/monopoly.c:104
-msgid "Select the resource you wish to monopolise."
+msgid "Select the resource you wish to monopolize."
 msgstr "Escoge el recurso que quieres monopolizar."
 
 #: ../client/gtk/name.c:123
