--- a/pioneers/po/it.po
+++ b/pioneers/po/it.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pioneers 0.12.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-09-26 10:18+0200\n"
+"POT-Creation-Date: 2010-09-27 08:02+0200\n"
 "PO-Revision-Date: 2009-10-19 09:12:00+0200\n"
 "Last-Translator: Giancarlo Capella <giancarlo@comm.cc>\n"
 "Language-Team: it <it@li.org>\n"
@@ -723,7 +723,7 @@ msgstr "%s ha tolto un ponte.\n"
 
 #: ../client/common/player.c:673
 #, c-format
-msgid "%s has cancelled a ship's movement.\n"
+msgid "%s has canceled a ship's movement.\n"
 msgstr "%s ha annullato un movimento di nave.\n"
 
 #: ../client/common/player.c:676
@@ -1693,7 +1693,7 @@ msgid "Development Card"
 msgstr "Carta Sviluppo"
 
 #: ../client/gtk/monopoly.c:104
-msgid "Select the resource you wish to monopolise."
+msgid "Select the resource you wish to monopolize."
 msgstr "Scegli la materia prima da monopolizzare."
 
 #: ../client/gtk/name.c:123
