--- a/pioneers/po/nl.po
+++ b/pioneers/po/nl.po
@@ -1494,7 +1494,7 @@ msgstr "Handelen"
 #. Tooltip for Undo menu entry
 #: ../client/gtk/gui.c:276 ../client/gtk/gui.c:278
 msgid "Undo"
-msgstr "Ongedaan maken"
+msgstr "Herstellen"
 
 #. Menu entry
 #. Tooltip for Finish menu entry
@@ -2019,7 +2019,7 @@ msgstr "%s heeft %s en zoekt %s"
 #. Label
 #: ../client/gtk/quote.c:299
 msgid "I want"
-msgstr "Ik wil"
+msgstr "I wil"
 
 #. Label
 #: ../client/gtk/quote.c:309
