--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -1,3 +1,8 @@
+2011-11-28  Roland Clobus <rclobus@rclobus.nl>
+	* client/ai/ai.c: Removed old debug line.
+	* pioneers.nsi.in, MinGW/gdk-pixbuf.loaders, MinGW/Makefile.am,
+	MinGW/loaders.cache, README.MinGW: Release of 0.12.5 for Windows.
+
 2011-10-30  Roland Clobus <rclobus@rclobus.nl>
 	* server/player.c, server/server.c, server/server.h, server/pregame.c:
 	Forget players in the lobby when they disconnect. Don't start the lobby
