--- a/branches/14_1/pioneers/ChangeLog
+++ b/branches/14_1/pioneers/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-03  Roland Clobus <rclobus@rclobus.nl>
+	* MinGW/pioneers.nsi.in: Added missing dll.
+	* configure.ac: LDFLAGS for hardening don't work under Windows.
+
 2012-05-28  Roland Clobus <rclobus@rclobus.nl>
 	* common/gtk/theme.c: Removed deprecated warning.
 	* common/gtk/config-gnome.c, server/player.c: Suppress warnings for
