--- a/branches/debian-release-14.1-3/changelog
+++ b/branches/debian-release-14.1-3/changelog
@@ -1,10 +1,11 @@
-pioneers (14.1-2.1) UNRELEASED; urgency=medium
+pioneers (14.1-3) unstable; urgency=medium
 
   * Updated copyright which clarifies the license for the images.
     (closes: #765319)
   * Applied license patch from the upstream repository.
+  * Updated translations
 
- -- Roland Clobus <rclobus@rclobus.nl>  Thu, 25 Nov 2014 08:00:00 +0100
+ -- Roland Clobus <rclobus@rclobus.nl>  Sun, 28 Dec 2014 01:00:00 +0100
 
 pioneers (14.1-2) unstable; urgency=low
 
